# keyprod_tracking

./: CHANGELOG.md  README.md  main.py  pyproject.toml  ram_tracking.db  start.bat  start.sh  stop.sh
app/: database.py  main.py  scraper.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: PriceHistoryChart.jsx  RamTable.jsx
frontend/src/services/: api.js
scripts/: add_tracked.py  price_history.py  scrape.py  tracked_history.py  update_categories.py  view_data.py
tests/: test_api.py  test_scraper.py
