[project]
name = "keyprod-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "aiohttp>=3.10.0",
    "uvicorn>=0.30.0",
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
